--- a/F429_tokyo2022.ioc
+++ b/F429_tokyo2022.ioc
@@ -30,7 +30,8 @@ Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP10=TIM9
 Mcu.IP11=TIM12
-Mcu.IP12=USART3
+Mcu.IP12=USART1
+Mcu.IP13=USART3
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
@@ -39,7 +40,7 @@ Mcu.IP6=TIM4
 Mcu.IP7=TIM5
 Mcu.IP8=TIM6
 Mcu.IP9=TIM7
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -57,24 +58,26 @@ Mcu.Pin19=PD12
 Mcu.Pin2=PE4
 Mcu.Pin20=PD13
 Mcu.Pin21=PD14
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PA15
-Mcu.Pin25=PB3
-Mcu.Pin26=PB4
-Mcu.Pin27=PB5
-Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin22=PA9
+Mcu.Pin23=PA10
+Mcu.Pin24=PA13
+Mcu.Pin25=PA14
+Mcu.Pin26=PA15
+Mcu.Pin27=PB3
+Mcu.Pin28=PB4
+Mcu.Pin29=PB5
 Mcu.Pin3=PE5
-Mcu.Pin30=VP_TIM9_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM12_VS_ClockSourceINT
+Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM9_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin4=PE6
 Mcu.Pin5=PC13
 Mcu.Pin6=PC14/OSC32_IN
 Mcu.Pin7=PC15/OSC32_OUT
 Mcu.Pin8=PH0/OSC_IN
 Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=32
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -100,12 +103,18 @@ PA0/WKUP.Locked=true
 PA0/WKUP.Signal=S_TIM5_CH1
 PA1.Locked=true
 PA1.Signal=S_TIM5_CH2
+PA10.Locked=true
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Locked=true
 PA15.Signal=S_TIM2_CH1_ETR
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB10.Locked=true
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
@@ -182,7 +191,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM12_Init-TIM12-false-HAL-true,5-MX_TIM9_Init-TIM9-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM12_Init-TIM12-false-HAL-true,5-MX_TIM9_Init-TIM9-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_TIM7_Init-TIM7-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_TIM6_Init-TIM6-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -271,6 +280,8 @@ TIM9.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM9.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler
 TIM9.Period=4500-1
 TIM9.Prescaler=1-1
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_TIM12_VS_ClockSourceINT.Mode=Internal
